# context-debt

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README.zh-CN.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml
docs/: releasing.md  rules.md  rules.zh-CN.md
fixtures/clean-repo/: AGENTS.md  package.json
fixtures/clean-repo/docs/: testing.md
fixtures/command-variants/: AGENTS.md  package.json
fixtures/conflicting-package-manager/: AGENTS.md  CLAUDE.md  package.json
fixtures/conflicting-python-package-manager/: AGENTS.md
fixtures/contradictory-commands/: AGENTS.md  CLAUDE.md  package.json
fixtures/contradictory-test-command/: AGENTS.md  CLAUDE.md  package.json
fixtures/dangerous-mcp/: .mcp.json  package.json
fixtures/docs-route-reference/: AGENTS.md
fixtures/doctor-configured/: AGENTS.md  context-debt.config.json  package.json
fixtures/doctor-configured/docs/: custom.md
fixtures/duplicate-instructions/: AGENTS.md  CLAUDE.md  package.json
fixtures/fenced-example-reference/: AGENTS.md  package.json
fixtures/fenced-example-reference/docs/: testing.md
fixtures/fix-target/: AGENTS.md  CLAUDE.md  package.json
fixtures/missing-build-script/: AGENTS.md  package.json
fixtures/missing-lint-script/: AGENTS.md  package.json
fixtures/missing-python-lint-command/: AGENTS.md
fixtures/missing-python-test-command/: AGENTS.md
fixtures/missing-reference/: AGENTS.md  package.json
fixtures/missing-reference-configured/: AGENTS.md  context-debt.config.json  package.json
fixtures/missing-test-script/: CLAUDE.md  package.json
fixtures/mixed-package-manager-families/: AGENTS.md  package.json
fixtures/nested-package-scripts/: AGENTS.md
fixtures/no-ai-context/: README.md  package.json
fixtures/oversized-context-file/: AGENTS.md  context-debt.config.json  package.json
fixtures/path-heuristics/: AGENTS.md  package.json
fixtures/python-pytest-context/: AGENTS.md  pyproject.toml
fixtures/python-ruff-context/: AGENTS.md  pyproject.toml
fixtures/readme-catalog-regression/: AGENTS.md  README.md  package.json
fixtures/real-repo-monorepo-regression/: AGENTS.md  README.md  package.json
fixtures/real-repo-readme-regression/: README.md  package.json
fixtures/repeated-negative-rules/: AGENTS.md  package.json
fixtures/rule-settings/: AGENTS.md  context-debt.config.json  package.json
fixtures/safe-mcp/: AGENTS.md  package.json
fixtures/scoped-discovery/: AGENTS.md  context-debt.config.json  package.json
fixtures/self-contained-python-lint-command/: AGENTS.md
fixtures/self-contained-python-test-command/: AGENTS.md
fixtures/stale-reference/: AGENTS.md  context-debt.config.json  package.json
fixtures/stale-reference-unique/: AGENTS.md  package.json
fixtures/token-waste/: AGENTS.md  context-debt.config.json  package.json
fixtures/too-many-global-rules/: AGENTS.md  package.json
regressions/: THIRD_PARTY_FIXTURES.md  manifest.json
regressions/repos/ai-agent-ready-001/: AGENTS.md  CLAUDE.md  README.md  mcp.json  pyproject.toml
regressions/repos/ai-agent-ready-001/.github/: dependabot.yml
regressions/repos/ai-agent-ready-001/.github/workflows/: ci.yml  codeql.yml  context-drift-detector.yml  install-to-target-repo.yml  release.yml  reusable-transformer.yml
regressions/repos/ai-agent-ready-001/docs/: automation.md
regressions/repos/ai-agent-ready-001/src/agent_ready/: __init__.py  analyser.py  cli.py  evaluator.py  generator.py  ground_truth.py  mcp_server.py  reviewer.py
regressions/repos/ai-agent-ready-001/src/agent_ready/golden_sets/: base.json  go.json  java.json  javascript.json  python.json
regressions/repos/ai-agent-ready-001/src/agent_ready/templates/: context-drift-detector-workflow.yml  eval-workflow.yml  install-workflow.yml  issue-template-agentic-ready.yml  pr-review-workflow.yml
regressions/repos/ai-agent-ready-001/tests/: test_analyser.py  test_cli.py  test_evaluator.py  test_generator.py  test_golden_eval.py  test_mcp_server.py  test_reviewer.py
regressions/repos/mcp-cratedb-001/: README.md  pyproject.toml
regressions/snapshots/: ai-agent-ready-001.json  ai-agentsmd-001.json  ai-cli-continues-001.json  ai-cursor-rules-001.json  ai-openhands-001.json  ai-squirrelogic-001.json  docs-global-project-agents-001.json  docs-openhands-001.json  mcp-abcdan-001.json  mcp-cratedb-001.json  monorepo-commonware-001.json  monorepo-rulesmith-001.json
scripts/: collect-real-fixture.mjs  smoke-package.mjs  update-real-regression-snapshots.mjs  validate-real-regression-manifest.mjs
src/: cli.ts  index.ts
src/core/: autofix-session.ts  confidence.ts  config.ts  context.ts  discovery.ts  fix.ts  html-report-style.ts  html-report.ts  meta.ts  project-tooling.ts  regression-format.ts  regression-matching.ts  regression-schema.ts  regressions.ts  report.ts  rule-settings.ts  scan-report.ts  scanner.ts  schema.ts  types.ts
src/parsers/: command-helpers.ts  markdown-heuristics.ts  markdown-tables.ts  markdown.ts  mcp.ts  package-json.ts  path-helpers.ts  python-test-commands.ts  text.ts
src/rules/: conflicting-package-manager.ts  contradictory-build-command.ts  contradictory-command.ts  contradictory-lint-command.ts  contradictory-test-command.ts  dangerous-mcp-permission.ts  duplicate-instructions.ts  index.ts  missing-ai-context.ts  missing-build-script.ts  missing-lint-script.ts  missing-python-lint-command.ts  missing-python-test-command.ts  missing-test-script.ts  oversized-context-file.ts  python-command-rule.ts  referenced-file-missing.ts  repeated-negative-rules.ts  script-resolution.ts  script-rule.ts  stale-reference.ts  token-waste.ts  too-many-global-rules.ts
src/utils/: context-units.ts  fs.ts  glob.ts  instruction-text.ts  mcp-risk.ts  path-patterns.ts  path.ts  reference-ignore.ts  references.ts  text.ts
tests/: cli.test.ts  config.test.ts  helpers.ts  html-report.test.ts  markdown-commands.test.ts  parsers.test.ts  project-tooling.test.ts  real-regressions.test.ts  regressions.test.ts  scanner.test.ts  script-resolution.test.ts
(+164 files in other folders)
