[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ready"
dynamic = ["version"]
description = "Transform any repository into an AI-agent-ready codebase"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "mcp", "code-generation", "devtools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
]
dependencies = []  # zero hard deps — pure stdlib

[project.optional-dependencies]
ai  = ["litellm>=1.35.0", "mcp>=1.0.0"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4"]

[project.scripts]
agent-ready     = "agent_ready.cli:main"
agent-ready-mcp = "agent_ready.mcp_server:main"

[project.urls]
Homepage   = "https://github.com/vb-nattamai/agent-ready"
Repository = "https://github.com/vb-nattamai/agent-ready"
Changelog  = "https://github.com/vb-nattamai/agent-ready/blob/main/CHANGELOG.md"

# ── Version is read from agent_ready.__version__ ──────────────────────────
[tool.setuptools.dynamic]
version = { attr = "agent_ready.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_ready = ["templates/*"]

# ── Test configuration ─────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ── Ruff (linter + formatter) ──────────────────────────────────────────────
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py310"
exclude = ["src/agent_ready/templates"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]