[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42", # At least v42 of setuptools required.
  "versioningit",
]

[project]
name = "cratedb-mcp"
description = "CrateDB MCP Server for natural-language Text-to-SQL and documentation retrieval."
readme = "README.md"
keywords = [
  "cratedb",
  "documentation retrieval",
  "knowledge base",
  "mcp",
  "mcp server",
  "model context protocol",
  "sql",
  "text-to-sql",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
authors = [
  { name = "CrateDB engineering" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Adaptive Technologies",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Documentation",
  "Topic :: Education",
  "Topic :: Internet",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Pre-processors",
  "Topic :: System :: Clustering",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "attrs",
  "cachetools<8",
  "click<9",
  "cratedb-about<0.1.0",
  "fastmcp>=2.13,<3.2",
  "hishel<0.2",
  "pueblo>=0.0.15,<0.1",
  "sqlparse<0.6",
]
optional-dependencies.develop = [
  "mypy<1.21",
  "poethepoet<1",
  "pyproject-fmt<3",
  "ruff<0.16",
  "validate-pyproject<1",
]
optional-dependencies.docs = [
  "furo",
  "myst-parser[linkify]>=0.18,<5",
  "sphinx<8",
  "sphinx-autobuild==2025.8.25",   # Newer versions stopped "watching" appropriately?
  "sphinx-copybutton",
  "sphinx-design-elements<1",
  "sphinxcontrib-mermaid<3",
  "sphinxext-opengraph<1",
]
optional-dependencies.test = [
  "pytest<10",
  "pytest-cov<8",
  "pytest-mock<4",
]
urls.Changelog = "https://github.com/crate/cratedb-mcp/blob/main/CHANGES.md"
urls.Documentation = "https://cratedb-mcp.readthedocs.io/"
urls.Issues = "https://github.com/crate/cratedb-mcp/issues"
urls.Repository = "https://github.com/crate/cratedb-mcp"
scripts.cratedb-mcp = "cratedb_mcp.cli:cli"

[tool.setuptools]
package-data.cratedb_mcp = [
  "**/*.md",
]
packages.find.namespaces = false

[tool.ruff]
line-length = 100
extend-exclude = []
lint.select = [
  # Builtins
  "A",
  # Bugbear
  "B",
  # comprehensions
  "C4",
  # Pycodestyle
  "E",
  # eradicate
  "ERA",
  # Pyflakes
  "F",
  # isort
  "I",
  # pandas-vet
  "PD",
  # return
  "RET",
  # Bandit
  "S",
  # print
  "T20",
  "W",
  # flake8-2020
  "YTT",
]
lint.per-file-ignores."docs/conf.py" = [ "A001", "ERA001" ]
lint.per-file-ignores."tests/*" = [
  "S101", # Allow use of `assert`.
]

[tool.mypy]
packages = [
  "cratedb_mcp",
]
check_untyped_defs = true
ignore_missing_imports = true
implicit_optional = true
install_types = true
non_interactive = true

[tool.pytest]
ini_options.addopts = """
  -rfEXs -p pytester --strict-markers --verbosity=3
  --cov --cov-report=term-missing --cov-report=xml
  """
ini_options.minversion = "2.0"
ini_options.log_level = "DEBUG"
ini_options.log_cli_level = "DEBUG"
ini_options.log_format = "%(asctime)-15s [%(name)-36s] %(levelname)-8s: %(message)s"
ini_options.pythonpath = [
  "src",
]
ini_options.xfail_strict = true
ini_options.markers = []

[tool.coverage]
run.branch = false
run.omit = [
  "tests/*",
]
paths.source = [
  "src/",
]
report.exclude_lines = [
  "# pragma: no cover",
  "raise NotImplemented",
]
report.show_missing = true

[tool.poe]
# ===================
# Tasks configuration
# ===================
tasks.check = [
  "lint",
  "test",
]
tasks.docs-autobuild = [
  { cmd = "sphinx-autobuild --open-browser --watch cratedb_mcp docs docs/_build" },
]
tasks.docs-html = [
  { cmd = "sphinx-build -W --keep-going docs docs/_build" },
]
tasks.docs-linkcheck = [
  { cmd = "sphinx-build -W --keep-going -b linkcheck doc docs/_build" },
]
tasks.format = [
  { cmd = "ruff format ." },
  # Configure Ruff not to auto-fix (remove!):
  # unused imports (F401), unused variables (F841), `print` statements (T201), and commented-out code (ERA001).
  { cmd = "ruff check --fix --ignore=ERA --ignore=F401 --ignore=F841 --ignore=T20 --ignore=ERA001 ." },
  { cmd = "pyproject-fmt --keep-full-version pyproject.toml" },
]
tasks.lint = [
  { cmd = "ruff format --check ." },
  { cmd = "ruff check ." },
  { cmd = "validate-pyproject pyproject.toml" },
  { cmd = "mypy" },
]
tasks.release = [
  { cmd = "python -m build" },
  { cmd = "twine upload --skip-existing dist/*" },
]
tasks.test = { cmd = "pytest" }

[tool.versioningit]
vcs.method = "git-archive"
vcs.default-tag = "v0.0.0"
vcs.describe-subst = "$Format:%(describe:tags,match=v*)$"
# Emit PyPI-compatible "dirty" version strings. `+` characters are unsuitable, because
# they would designate local version identifiers, which do not upload to PyPI.
# https://packaging.python.org/en/latest/specifications/version-specifiers/#local-version-identifiers
format.distance = "{base_version}.dev{distance}"
